--- a/src/boards/MTS_MDOT/CMakeLists.txt
+++ b/src/boards/MTS_MDOT/CMakeLists.txt
@@ -35,24 +35,24 @@ list(APPEND ${PROJECT_NAME}_SOURCES
     "${CMAKE_CURRENT_SOURCE_DIR}/../mcu/stm32/sysIrqHandlers.c"
     "${CMAKE_CURRENT_SOURCE_DIR}/../mcu/utilities.c"
     "${CMAKE_CURRENT_SOURCE_DIR}/cmsis/arm-gcc/startup_stm32f411xe.s"
-    "${CMAKE_CURRENT_SOURCE_DIR}/cmsis/system_stm32F4xx.c"
-    "${CMAKE_CURRENT_SOURCE_DIR}/../mcu/stm32/STM32F4xx_HAL_Driver/Src/stm32F4xx_hal.c"
-    "${CMAKE_CURRENT_SOURCE_DIR}/../mcu/stm32/STM32F4xx_HAL_Driver/Src/stm32F4xx_hal_adc.c"
-    "${CMAKE_CURRENT_SOURCE_DIR}/../mcu/stm32/STM32F4xx_HAL_Driver/Src/stm32F4xx_hal_adc_ex.c"
-    "${CMAKE_CURRENT_SOURCE_DIR}/../mcu/stm32/STM32F4xx_HAL_Driver/Src/stm32F4xx_hal_cortex.c"
-    "${CMAKE_CURRENT_SOURCE_DIR}/../mcu/stm32/STM32F4xx_HAL_Driver/Src/stm32F4xx_hal_dma.c"
-    "${CMAKE_CURRENT_SOURCE_DIR}/../mcu/stm32/STM32F4xx_HAL_Driver/Src/stm32F4xx_hal_flash.c"
-    "${CMAKE_CURRENT_SOURCE_DIR}/../mcu/stm32/STM32F4xx_HAL_Driver/Src/stm32F4xx_hal_flash_ex.c"
-    "${CMAKE_CURRENT_SOURCE_DIR}/../mcu/stm32/STM32F4xx_HAL_Driver/Src/stm32F4xx_hal_gpio.c"
-    "${CMAKE_CURRENT_SOURCE_DIR}/../mcu/stm32/STM32F4xx_HAL_Driver/Src/stm32F4xx_hal_i2c.c"
-    "${CMAKE_CURRENT_SOURCE_DIR}/../mcu/stm32/STM32F4xx_HAL_Driver/Src/stm32F4xx_hal_pwr.c"
-    "${CMAKE_CURRENT_SOURCE_DIR}/../mcu/stm32/STM32F4xx_HAL_Driver/Src/stm32F4xx_hal_pwr_ex.c"
-    "${CMAKE_CURRENT_SOURCE_DIR}/../mcu/stm32/STM32F4xx_HAL_Driver/Src/stm32F4xx_hal_rcc.c"
-    "${CMAKE_CURRENT_SOURCE_DIR}/../mcu/stm32/STM32F4xx_HAL_Driver/Src/stm32F4xx_hal_rcc_ex.c"
-    "${CMAKE_CURRENT_SOURCE_DIR}/../mcu/stm32/STM32F4xx_HAL_Driver/Src/stm32F4xx_hal_rtc.c"
-    "${CMAKE_CURRENT_SOURCE_DIR}/../mcu/stm32/STM32F4xx_HAL_Driver/Src/stm32F4xx_hal_rtc_ex.c"
-    "${CMAKE_CURRENT_SOURCE_DIR}/../mcu/stm32/STM32F4xx_HAL_Driver/Src/stm32F4xx_hal_spi.c"
-    "${CMAKE_CURRENT_SOURCE_DIR}/../mcu/stm32/STM32F4xx_HAL_Driver/Src/stm32F4xx_hal_uart.c"
+    "${CMAKE_CURRENT_SOURCE_DIR}/cmsis/system_stm32f4xx.c"
+    "${CMAKE_CURRENT_SOURCE_DIR}/../mcu/stm32/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal.c"
+    "${CMAKE_CURRENT_SOURCE_DIR}/../mcu/stm32/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_adc.c"
+    "${CMAKE_CURRENT_SOURCE_DIR}/../mcu/stm32/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_adc_ex.c"
+    "${CMAKE_CURRENT_SOURCE_DIR}/../mcu/stm32/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_cortex.c"
+    "${CMAKE_CURRENT_SOURCE_DIR}/../mcu/stm32/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dma.c"
+    "${CMAKE_CURRENT_SOURCE_DIR}/../mcu/stm32/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_flash.c"
+    "${CMAKE_CURRENT_SOURCE_DIR}/../mcu/stm32/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_flash_ex.c"
+    "${CMAKE_CURRENT_SOURCE_DIR}/../mcu/stm32/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_gpio.c"
+    "${CMAKE_CURRENT_SOURCE_DIR}/../mcu/stm32/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_i2c.c"
+    "${CMAKE_CURRENT_SOURCE_DIR}/../mcu/stm32/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pwr.c"
+    "${CMAKE_CURRENT_SOURCE_DIR}/../mcu/stm32/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pwr_ex.c"
+    "${CMAKE_CURRENT_SOURCE_DIR}/../mcu/stm32/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rcc.c"
+    "${CMAKE_CURRENT_SOURCE_DIR}/../mcu/stm32/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rcc_ex.c"
+    "${CMAKE_CURRENT_SOURCE_DIR}/../mcu/stm32/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rtc.c"
+    "${CMAKE_CURRENT_SOURCE_DIR}/../mcu/stm32/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rtc_ex.c"
+    "${CMAKE_CURRENT_SOURCE_DIR}/../mcu/stm32/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_spi.c"
+    "${CMAKE_CURRENT_SOURCE_DIR}/../mcu/stm32/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_uart.c"
 )
 
 if(MBED_RADIO_SHIELD STREQUAL SX1272MB2DAS)
