Added cmake compiler/linker flags for stm32f4. Changed MDot to use stm32f4. Store EUIs using Mib in LoraMac/classA/MTS_MDOT application. Added ping-pong MTS_MDOT. Fixed ID addressing and SPI device used for SX1272. Initialize RTC clocks properly. Use PA_BOOST.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -100,7 +100,7 @@ elseif(BOARD STREQUAL MTS_XDOT)
 elseif(BOARD STREQUAL MTS_MDOT)
     # Configure toolchain for MTS_MDOT
     set(LINKER_SCRIPT ${CMAKE_CURRENT_SOURCE_DIR}/boards/MTS_MDOT/cmsis/arm-gcc/STM32F411RETx_FLASH.ld)
-    include(stm32l1)
+    include(stm32f4)
 
     # Build platform specific board implementation
     add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/boards/MTS_MDOT)
